force-app/main/default/objects/Asset/fields/AMC_Amount_for_One_Year__c.field-meta.xml
<CustomField>
    <fullName>AMC_Amount_for_One_Year__c</fullName>
    <label>AMC Amount for One Year</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>