force-app/main/default/objects/Asset/fields/AMC_Amount_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>AMC_Amount_Invoiced__c</fullName>
    <label>AMC Amount Invoiced</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>