force-app/main/default/objects/Asset/fields/AMC_Payment_Pending__c.field-meta.xml
<CustomField>
    <fullName>AMC_Payment_Pending__c</fullName>
    <label>AMC Payment Pending</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>