force-app/main/default/objects/Asset/fields/AMC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AMC_Start_Date__c</fullName>
    <label>AMC Start Date</label>
    <type>Date</type>
</CustomField>