force-app/main/default/objects/Asset/fields/AMC_Type__c.field-meta.xml
<CustomField>
    <fullName>AMC_Type__c</fullName>
    <label>AMC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAMC</fullName>
            </value>
            <value>
                <fullName>NCAMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>