force-app/main/default/objects/Asset/fields/Warranty_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Start_date__c</fullName>
    <label>Warranty Start Date</label>
    <type>Date</type>
</CustomField>